# fingerpain

./: .gitignore  Cargo.toml  README.md
crates/fingerpain-cli/: Cargo.toml
crates/fingerpain-cli/src/: main.rs
crates/fingerpain-core/: Cargo.toml
crates/fingerpain-core/src/: db.rs  export.rs  lib.rs  metrics.rs  session.rs
crates/fingerpain-daemon/: Cargo.toml
crates/fingerpain-daemon/src/: main.rs
crates/fingerpain-listener/: Cargo.toml
crates/fingerpain-listener/src/: counter.rs  lib.rs
crates/fingerpain-listener/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
crates/fingerpain-tray/: Cargo.toml
crates/fingerpain-tray/src/: main.rs
crates/fingerpain-web/: Cargo.toml
crates/fingerpain-web/src/: main.rs
crates/fingerpain-web/static/: index.html
extension/: README.md  background.js  manifest.json
extension/icons/: README.md
install/linux/: fingerpain.service  install.sh  uninstall.sh
install/macos/: com.fingerpain.daemon.plist  install.sh  uninstall.sh
install/windows/: install.ps1  uninstall.ps1
