[package]
name = "fingerpain-cli"
version.workspace = true
edition.workspace = true
description = "Command-line interface for FingerPain"

[[bin]]
name = "fingerpain"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
clap = { workspace = true }
fingerpain-core = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
tabled = "0.15"
colored = "2"
