[package]
name = "fingerpain-daemon"
version.workspace = true
edition.workspace = true
description = "Background daemon for FingerPain"

[[bin]]
name = "fingerpain-daemon"
path = "src/main.rs"

[dependencies]
fingerpain-core = { workspace = true }
chrono = { workspace = true }
rdev = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
