[package]
name = "fingerpain-listener"
version.workspace = true
edition.workspace = true
description = "Cross-platform keystroke listener for FingerPain"

[dependencies]
rdev = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
fingerpain-core = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.54", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = "0.13"
