[package]
name = "fingerpain-web"
version.workspace = true
edition.workspace = true
description = "Web dashboard for FingerPain"

[[bin]]
name = "fingerpain-web"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
fingerpain-core = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
